--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <h2>2024</h2>
                     <small>Certification</small>
                     <h3>Java Programming</h3>
-                    <h4>Infosys Springboard / CodTech</h4>
+                    <h4>Infosys Springboard</h4>
                     <p>Mastered Object-Oriented Programming, Exception Handling, and Data Structures.</p>
                     <span class="left-container-arrow"></span>
                 </div>
@@ -306,4 +306,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.0/vanilla-tilt.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
